// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer#create detect invalid 1`] = `
"Invalid reducer type. Could not find a matching reducer type while parsing the value:
 'a'
Try using an Array, String, Object, or Function.
More info: https://github.com/ViacomInc/data-point/tree/master/packages/data-point#reducers
"
`;

exports[`reducer#create detect invalid 2`] = `
"Invalid reducer type. Could not find a matching reducer type while parsing the value:
 true
Try using an Array, String, Object, or Function.
More info: https://github.com/ViacomInc/data-point/tree/master/packages/data-point#reducers
"
`;

exports[`reducer#create detect invalid 3`] = `
"Invalid reducer type. Could not find a matching reducer type while parsing the value:
 1
Try using an Array, String, Object, or Function.
More info: https://github.com/ViacomInc/data-point/tree/master/packages/data-point#reducers
"
`;

exports[`reducer#createDebug  1`] = `
Object {
  "reducer": ReducerObject {
    "reducers": Array [
      Object {
        "path": Array [
          "a",
        ],
        "reducer": ReducerList {
          "reducers": Array [
            ReducerPath {
              "asCollection": false,
              "body": [Function],
              "name": "a",
              "type": "ReducerPath",
              Symbol(reducer): true,
            },
            ReducerPath {
              "asCollection": false,
              "body": [Function],
              "name": "b",
              "type": "ReducerPath",
              Symbol(reducer): true,
            },
          ],
          "type": "ReducerList",
          Symbol(reducer): true,
        },
      },
      Object {
        "path": Array [
          "b",
        ],
        "reducer": ReducerFunction {
          "body": [Function],
          "type": "ReducerFunction",
          Symbol(reducer): true,
        },
      },
    ],
    "source": [Function],
    "type": "ReducerObject",
    Symbol(reducer): true,
  },
  "tree": WeakMap {},
}
`;
